--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,12 +7,15 @@
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="21" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" 
+        android:name="com.example.cookbooks.helper.MyApplication"
+        >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -22,6 +25,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity 
+            android:name="com.example.cookbooks.Activity.NavigationCooks"
+            >
+            
+        </activity>
+        <activity 
+            android:name="com.example.cookbooks.Activity.login_activity"
+            >      
+        </activity>
+        
     </application>
 
 </manifest>
